--- a/sass/base/_cart.scss
+++ b/sass/base/_cart.scss
@@ -381,6 +381,7 @@
         font-size: 16px;
         line-height: 135%;
         color: #FFFFFF;
+        text-align: center;
         &:hover {
             color: #000000;
         }
